--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./styles.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>My-cssproject3</h1>
+  <h1>Counter App</h1>
   <div id="counter">0</div>
   <div id="message"></div>
   <button id="increaseBtn">+ Increase</button>
